# Omit

./: .gitignore  Cargo.toml  README.md  anothertest.txt  test.file
.omit/: key  linker.json
src/: main.rs
src/commands/: commit.rs  default.rs  desync.rs  ensure.rs  init.rs  key.rs  mod.rs  pull.rs
src/components/: key.rs  linker.rs  mod.rs
