[package]
name = "omit"
version = "1.0.0"
edition = "2021"
description = "Omit allows you to securely share environment variables and secrets using a single key."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
cuid = "1.3.2"
rand = "0.8.5"
rng = "0.1.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
soft-aes = "0.2.2"
